# FastQuartDB

./: README.md  main.py  pyproject.toml
src/fastquartdb/: __init__.py  base_model.py  database_manager.py  utils.py
